<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1be25d">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:src="@drawable/anh"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:gravity="center"
        android:textSize="30dp"
        android:text="@string/ten_app"
        android:id="@+id/ll4"
        android:layout_above="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <LinearLayout
        android:id="@+id/ll3"
        android:padding="@dimen/marginTop"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:padding="10dp"
            android:drawableRight="@drawable/iconfacebook"
            android:layout_marginRight="10dp"
            android:id="@+id/tv1"
            android:textColor="#fff"
            android:background="@drawable/botron2"
            android:gravity="left|center"
            android:text="@string/dang_nhap_voi"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv" />

        <Button
            android:padding="10dp"
            android:drawableRight="@drawable/icongoogle"
            android:layout_marginLeft="10dp"
            android:id="@+id/tv2"
            android:textColor="#fff"
            android:background="@drawable/botron3"
            android:gravity="left|center"
            android:text="@string/dang_nhap_voi"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_above="@+id/ll1"
        android:padding="@dimen/marginTop"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/edtTenDN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button"
            android:background="@drawable/botron"
            android:drawableLeft="@drawable/iconuser"
            android:drawablePadding="10dp"
            android:gravity="left|center"
            android:hint="@string/uer_nam"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button"
            android:layout_marginTop="10dp"
            android:background="@drawable/botron"
            android:drawableLeft="@drawable/iconpass"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/pass_word"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button"
            android:background="@drawable/botron"
            android:hint="@string/dang_nhap" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvQuenMatKhau"
            android:gravity="center"
            android:text="@string/quen_mat_khau"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hight" />

        <TextView
            android:id="@+id/tvDangKy"
            android:gravity="center"
            android:text="@string/dang_ki"
            android:layout_marginBottom="@dimen/marginBottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hight" />
    </LinearLayout>

</RelativeLayout>
